Fixing styles for mobile
- Fix search bar styles
- Fix map being too big on certain screen sizes
- Tweak new post form to look better on smaller screens

--- a/public/app/common.less
+++ b/public/app/common.less
@@ -120,7 +120,7 @@ nav#top-nav-bar {
 }
 
 .mobile(@rules) {
-	@media all and (max-device-width: 4in) {
+	@media all and (max-width: 5in) {
 		@rules();
 	}
 }
