--- a/public/app/home-feed/post-form/post-form.less
+++ b/public/app/home-feed/post-form/post-form.less
@@ -21,6 +21,11 @@
 			max-width: 4em;
 			max-height: 4em;
 			flex-basis: 100%;
+
+			.mobile({
+				max-width: 3.5em;
+				max-height: 3.5em;
+			});
 		}
 
 		.textarea-flex-wrapper {
@@ -39,6 +44,10 @@
 
 				margin: 0;
 				box-sizing: border-box;
+
+				.mobile({
+					height: 4em;
+				});
 			}
 		}
 	}
@@ -54,13 +63,20 @@
 			font-size: .8em;
 		}
 
+		select {
+			margin-right: 1em;
+		}
+
+		input {
+			margin: 0 .3em 0 0;
+		}
+
 		.privacy-option {
 			display: none;
-			margin-left: 1em;
 		}
 
 		&.is-public .privacy-option {
-			display: inline-block;;
+			display: inline-block;
 		}
 	}
 	
